# re-vibe

./: .dockerignore  .gitignore  .http  API_TEST.http  Cargo.toml  Dockerfile  LOCAL_DEVELOPMENT.md  Makefile  README.md  Rocket.toml  diesel.toml  docker-compose.test.yml  docker-compose.yml  env.test.example  run_local.sh  run_tests.sh  test_ci_local.sh
.cargo/: config.toml
.github/workflows/: ci.yml  prod.yml
UI/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
UI/src/: App.tsx  index.css  theme.d.ts  types.ts
UI/src/components/: Buttons.tsx  Card.tsx  Carousel.tsx  FavoriteIcon.tsx  Footer.tsx  Header.tsx  ImageScroller.tsx  Logo.tsx
UI/src/constants/: dummy.ts  requests.ts
UI/src/hooks/: useAuth.tsx  useFavoriteProducts.tsx  useFetch.tsx  useRequest.tsx  useSwipe.tsx
UI/src/pages/: Home.tsx  Login.tsx  Products.tsx
UI/src/pages/Products/: FavoriteProducts.tsx  ProductCard.tsx  ProductsPage.tsx
UI/src/styles/: global.tsx  layouts.tsx
UI/src/types/: vite-plugin-svgr.d.ts
api/: Cargo.toml
api/src/: auth_handler.rs  post_handler.rs  user_handler.rs
application/: Cargo.toml
application/src/post/: create.rs  delete.rs  read.rs  update.rs
application/src/user/: create.rs  delete.rs  read.rs  update.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
hooks/: pre-commit
infrastructure/src/: auth.rs  lib.rs
migrations/2023-08-20-075303_create_posts/: down.sql  up.sql
src/UI/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
src/UI/src/: App.tsx  index.css
src/UI/src/components/: Buttons.tsx  Carousel.tsx  FavoriteIcon.tsx  Footer.tsx  HamburgerMenu.tsx  Header.tsx  ImageScroller.tsx  Input.tsx  ProductImage.tsx
src/UI/src/constants/: requests.ts
src/UI/src/hooks/: useFavoriteProducts.tsx  useProducts.tsx  useRequest.tsx  useSwipe.tsx
src/UI/src/pages/: Home.tsx  Login.tsx
src/UI/src/pages/FavoriteProducts/: FavoriteProductsPage.tsx
src/UI/src/pages/ProductDetails/: ProductDetailsPage.tsx
src/UI/src/pages/Products/: FavoriteProducts.tsx  ProductCard.tsx  ProductsPage.tsx
src/UI/src/types/: global.d.ts  types.ts
src/api/: Cargo.toml
src/api/src/: auth_handler.rs  catcher_handler.rs  favorites_handler.rs  lib.rs  post_handler.rs  product_handler.rs  user_handler.rs
src/api/tests/: auth_handler_tests.rs
src/api/tests/common/: mod.rs
src/application/: Cargo.toml
src/application/src/: lib.rs
src/application/src/favorite/: create.rs  delete.rs  read.rs
src/application/src/post/: create.rs  delete.rs  read.rs  update.rs
src/application/src/product/: create.rs  delete.rs  read.rs  update.rs
src/application/src/user/: create.rs  delete.rs  login.rs  read.rs  update.rs
src/application/tests/: user_tests.rs
src/application/tests/common/: mod.rs
src/domain/: Cargo.toml
src/domain/src/: models.rs  schema.rs
src/domain/tests/: model_tests.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: auth.rs  database.rs  lib.rs  s3_client.rs  validation.rs
src/infrastructure/tests/: auth_tests.rs  validation_tests.rs
src/migrations/2023-08-21-075303_create_posts_and_users/: down.sql  up.sql
src/migrations/2024-02-06-054242_generate_products_users/: down.sql  up.sql
src/migrations/2024-09-12-103547_add_url_to_products/: down.sql  up.sql
src/migrations/2024-09-17-101642_create_users_and_products/: down.sql  up.sql
src/migrations/2024-09-27-175230_favorite_products_table/: down.sql  up.sql
src/shared/src/: request_models.rs  response_models.rs
