# domain/Cargo.toml

[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
rust-argon2 = "2.0.0"
