# api/Cargo.toml

[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
serde_json = "1.0.88"
hmac = "0.12.1"
sha2 = "0.10.7"
jwt = "0.16.0"
chrono = "0.4.23"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
