[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
rocket = { version = "0.5.0-rc.2" }
dotenvy = "0.15"
hmac = "0.12.1"
sha2 = "0.10.7"
jwt = "0.16.0"
chrono = "0.4.23"
aws-sdk-s3 = "1.49.0"
aws-config = "1.5.6"
tokio = { version = "1", features = ["full"] }
